Yeran.K | define guidelines feature AI suggestions feature

--- a/templates/code_formatter/define_guidelines.html
+++ b/templates/code_formatter/define_guidelines.html
@@ -43,7 +43,7 @@
                 <label class="text-white">Upload Company Logo:</label>
                 <input type="file" name="company_logo" id="logo-input" accept="image/png, image/jpeg" class="form-control mb-3">
                 <div class="preview-container">
-                    <img id="logo-preview" src="{% static 'images/default-logo.png' %}" alt="Company Logo Preview" class="company-logo-preview">
+                    <img id="logo-preview" src="{% static 'images/gallery.png' %}" alt="Company Logo Preview" class="company-logo-preview">
                 </div>
             </div>
 
@@ -77,7 +77,7 @@
                         {% if guideline.company_logo %}
                             <img src="{{ guideline.company_logo.url }}" alt="Company Logo" class="company-logo">
                         {% else %}
-                            <img src="{% static 'images/default-logo.png' %}" alt="Default Logo" class="company-logo">
+                            <img src="{% static 'images/gallery.png' %}" alt="Default Logo" class="company-logo">
                         {% endif %}
                         <div class="guideline-content">
                             <strong>{{ guideline.company_name }}</strong>
